css/controls.css
/* ... */
.buttonbox {
    display: inline;
    position: absolute;
    bottom: 8px;
    right: 8px;
}

.buttonList {
    display: inline-block;
}

.bright .buttonIcon, .bright .buttonIconSmall {
    filter: invert(90%);
}

.no-invert {
    filter: invert(0%) !important;
}

.buttonIcon {
    width: 64px;
    padding: 10px;
}

.buttonIconSmall {
    width: 64px;
    padding: 10px;
}

.control-element {
    margin-top: 5px;
    margin-left: 1px;
    margin-bottom: 5px;
}

/* === Label sizes === */
.huge {
    font-size: 35pt;
    font-weight: bold;
}

.big {
    font-size: 24pt;
    font-weight: bold;
    margin-top: 5px;
    margin-bottom: 10px;
}

.medium {
    font-size: 13pt;
}

/* === Animation === */

.fadeOut {
    animation-name: fadeOut;
    animation-duration: 0.5s;
}

.fadeIn {
    animation-name: fadeIn;
    animation-duration: 0.5s;
}

@keyframes fadeOut {
    0% {
        filter: opacity(100%);
    }
    100% {
        filter: opacity(0%);
    }
}

@keyframes fadeIn {
    0% {
        filter: opacity(0%);
    }
    100% {
        filter: opacity(100%);
    }
}

/* === Page layout === */
.header {
    margin: 10px;
}

.page, .pages {
    position: relative;
    width: auto;
    height: auto;
}

.listCenter {
    text-align: center;
}

.control-container {
    display: flex;
}

.control-container > .cell {
    width: 100%;
    margin-right: 7px;
}

/* === Tab bar === */

.tab-bar {
    display: flex;
}

.dark .tab-button {
    border-color:  var(--dark-tab-left-border);
    background-color: var(--dark-control);
    color: var(--dark-text);
}

.bright .tab-button-pressed {
    color: var(--bright-text);
}

.tab-button {
    float: left;
    min-width: 110px;
    border-style: none solid none none;
    border-width: 1px;
    font-size: 11pt;
    font-family: "Arial", Times, serif;
    font-weight: bold;
    border-style: solid solid solid none;
    border-width: 1px;
}

.tab-button-left {
    border-radius: 5px 1px 0px 5px;
}

.tab-button-middle {
    border-radius: 0px;
}

.dark .tab-button-right {
    border-color: var(--dark-tab-right-border);
} 

.tab-button-right {
    border-radius: 0px 5px 5px 0px;
}

.bright .tab-button-pressed {
    color: var(--bright-control);
}

.tab-button-pressed {
    background-color: var(--theme-accent) !important;
}

.tab-button-pressed:hover {
    background-color: var(--theme-accent-hovered) !important;
}

.time-input {
    overflow: hidden;
}

.dark .spinbox {
    background: var(--dark-control);
    border-color: var(--dark-control-border);
    color: var(--dark-text);
}

.bright .spinbox {
    background: var(--bright-control);
    border-color: var(--bright-control-border);
    color: var(--bright-text);
}

.spinbox {
    padding: 4px 6px 4px 6px;
    border-radius: 5px 0px 0px 5px;
    border-style: solid none none none;
    border-width: 1px;
    font-weight: bold;
    margin-top: 5px;
    margin-bottom: 5px;
    height: 15px;
    width: 60px;
    float: left;
}

.spinbox-buttons {
    float: left;
    margin-top: 5px;
    margin-right: 5px;
}

.dark .spinbox-up {
    background: var(--theme-spinbox-gradient);
    border-color: var(--dark-control-border);
}

.bright .spinbox-up {
    background: var(--bright-control);
    border-color: var(--bright-control-border);
}

.spinbox-up {
    outline: none;
    cursor: pointer;
    display: block;
    width: 20px;
    height: 12px;
    border-width: 1px;
    border-radius: 0px 5px 0px 0px;
    border-style: solid none none none;
    background-image: var(--theme-spinbox-gradient);
}

.dark .spinbox-up:hover {
    background: var(--theme-accent-hovered);
}

.dark .spinbox-down {
    background: var(--theme-accent);
}

.spinbox-down {
    outline: none;
    cursor: pointer;
    display: block;
    width: 20px;
    height: 12px;
    border-style: none;
    border-radius: 0px 0px 5px 0px;
    border-color: #ffffff33;
}

.dark .spinbox-down:hover {
    background: var(--theme-accent-hovered);
}

.spinbox-buttons svg {
    position: relative;
    top: 2px;
    left: -8px;
    fill: transparent;
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke: var(--theme-stroke);
    stroke-width: 2;
}

/* Fix spinbox size on firefox */
@-moz-document url-prefix() {
    .spinbox {
        padding: 2px 6px 2px 6px;
        font-size: 10pt;
    }

    .spinbox-buttons svg {
        top: 0px;
        left: -10px;
    }
}

div.inline, p.inline { float:left; }
.clearBoth { clear:both; }

/* Timeline */

.dark .vis-timeline {
    background-color: var(--dark-control);
    background: var(--dark-control);
    border-color: var(--dark-control-border);
}

.bright .vis-timeline {
    background-color: var(--bright-control);
    background: var(--bright-control);
    border-color: var(--bright-control-border);
}

.vis-timeline {
    border-radius: 3px;
    border-style: solid none none none;
    border-width: 1px;
}

.missed {
    background-color: var(--theme-red);
    border-color: var(--theme-dark-red);
    background-image: url("../img/cross.svg");
    background-size: 6px;
    background-repeat: repeat;
}

.taken {
    background-color: var(--theme-green);
    border-color: var(--theme-dark-green);
    background-image: url("../img/circle.svg");
    background-size: 4px;
    background-repeat: repeat;
}

.upcoming {
    background-color: var(--theme-orange);
    border-color: var(--theme-dark-orange);
}

/* List */
.sortable {
    height: 90px;
    width: 100%;
    list-style: none;
    padding: 0px;
    margin-right: 5px;
    overflow: auto;
}

.sortable > li {
    padding: 2px 3px 1px 3px;
}

.sortable > li:hover {
    background-color: var(--theme-item-selected);
}

.sortable > li:hover > .delete-icon {
    display: block;
}

.sortable-ghost {
    background-color: var(--theme-accent);
}

.delete-icon:hover {
    display: block;
}

.delete-icon {
    display: none;
    float: right;
    margin-top: -15px;
    width: 14px;
    height: 14px;
    cursor: pointer;
    transition:all .3s ease-in;
}

